--- a/chess/src/index.css
+++ b/chess/src/index.css
@@ -1,13 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: "white";
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.head {
+  font-family: Eras;
+  color: white;
+  font-size: 50px;
+  padding-left: 10px;
+
+  background-color: black;
+  padding: 30px;
+  box-shadow: 0px 40px 50px grey;
+  margin-top: 0px;
+}
+
+@font-face {
+  font-family: "Eras";
+  src: local("Eras"), url(./fonts/ITCErasStd-Light.otf);
 }
