--- a/chess/src/index.css
+++ b/chess/src/index.css
@@ -25,6 +25,27 @@ code {
   margin-top: 0px;
 }
 
+.undraggable {
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.chessboard {
+  margin-top: 400px;
+  margin-left: 750px;
+  height: 20%;
+  width: 20%;
+  transition: transform 0.2s;
+}
+
+.chessboard:hover {
+  transform: scale(1.3);
+}
+
 @font-face {
   font-family: "Eras";
   src: local("Eras"), url(./fonts/ITCErasStd-Light.otf);
