chess squares made, bootstrap issues present

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ code {
     monospace;
 }
 
+.flexbox-container {
+  display: flex;
+  flex-direction: row;
+}
+
 .head {
   font-family: Eras;
   color: white;
