--- a/src/index.css
+++ b/src/index.css
@@ -54,18 +54,6 @@ code {
   -ms-user-select: none;
 }
 
-.chessboard {
-  margin-top: 400px;
-  margin-left: 750px;
-  height: 20%;
-  width: 20%;
-  transition: transform 0.2s;
-}
-
-.chessboard:hover {
-  transform: scale(1.3);
-}
-
 @font-face {
   font-family: "Eras";
   src: local("Eras"), url(./fonts/ITCErasStd-Light.otf);
@@ -74,6 +62,16 @@ code {
 @font-face {
   font-family: "Typo Round";
   src: local("Typo Round"), url(./fonts/Typo_Round_Regular_Demo.otf);
+}
+
+@font-face {
+  font-family: "Kalyant";
+  src: local("Kalyant"), url(./fonts/KalyantDemo-4By5l.otf);
+}
+
+@font-face {
+  font-family: "Kalyant-Bold";
+  src: local("Kalyant-Bold"), url(./fonts/KalyantDemoBold-PKZ4d.otf);
 }
 
 .testForm {
@@ -126,7 +124,7 @@ button:hover {
 .wrapper .sidebar{
   width: 11vw;
   height: 100%;
-  background: #eeeeee;
+  background: #1f1f1f;
   padding: 30px 0px;
   position: fixed;
 }
@@ -137,6 +135,7 @@ button:hover {
 
 .main_content {
   width: 100%;
+  height: 100vh;
   margin-left: 12vw;
 }
 
@@ -145,7 +144,8 @@ button:hover {
   background: none;
   width: 400px;
   margin-left: 30vw;
-  border: none; 
+  border: none;
+  margin-top: 6vh
 }
 
 .spoons {
@@ -153,17 +153,51 @@ button:hover {
   width: 400px;
 }
 
-.textUnderLogo {
-  font-family: "Typo Round";
-  font-size: 25px;
-  text-align: center
-}
-
 .global {
   overflow-x: hidden;
+  height: auto;
 }
 
 .info {
-  padding-top: 6vw;
+  padding-top: 5.5vw;
   margin-left: 4.5vw;
+}
+
+.modal-body .startButton {
+  background-color:#ffffff;
+  background: none;
+  border: none; 
+  transition: transform 0.2s;
+}
+
+.modal-body .startButton:hover {
+  transform: scale(1.1);
+}
+
+.modal-div {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.kalyant {
+  font-family: "Kalyant";
+}
+
+.kalyant-bold{
+  font-family: "Kalyant-Bold";
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+.centered{
+  padding-left: 8vw
+}
+
+.endgameMenu {
+}
+
+.endgameText {
+  text-align: center;
+  justify-content: center;
+  padding-top: 150px;
+  color: white
 }
