--- a/src/index.css
+++ b/src/index.css
@@ -187,17 +187,36 @@ button:hover {
   font-family: "Kalyant-Bold";
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
-.centered{
-  padding-left: 8vw
+.movelog tr:nth-child(even) {background-color: #f2f2f2;}
+
+table {
+  display: block;
+  box-shadow: 1px 1px 4px #888888;
 }
 
-.endgameMenu {
+.movelog {
+  overflow-y:scroll;
+  height: 23vh;
+  padding-left: 8px;
+  padding-right: 4px;
+}
+
+.movelog {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.movelog::-webkit-scrollbar {
+  display: none;
+}
+
+.table.movelog{
+  width: 23.5vw;
+  box-shadow: none;
 }
 
 .endgameText {
-  text-align: center;
-  justify-content: center;
-  padding-top: 150px;
-  color: white
+  color: black;
 }
+
+
