--- a/src/index.css
+++ b/src/index.css
@@ -244,7 +244,7 @@ table {
 }
 
 .highlightedSkin {
-  border: 5px solid rgb(199, 199, 199);
+  background-color: rgb(213, 238, 255);
 }
 
 .settingsButton {
